Api-Tfg/src/main/kotlin/com/example/Api_Tfg/error/exception/BadRequestException.kt
package com.example.Api_Tfg.error.exception

class BadRequestException(message: String) : Exception("Bad Request Exception (400). $message") {
}